--- a/TravelLive/View/MapDetailViewController.storyboard
+++ b/TravelLive/View/MapDetailViewController.storyboard
@@ -59,6 +59,7 @@
             <point key="canvasLocation" x="95.652173913043484" y="107.8125"/>
         </scene>
     </scenes>
+    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
