--- a/TravelLive/View/CommentViewController.xib
+++ b/TravelLive/View/CommentViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -22,54 +22,53 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view alpha="0.84999999999999998" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F9o-RW-ZtE">
-                    <rect key="frame" x="50" y="344" width="289" height="218"/>
+                    <rect key="frame" x="50" y="294" width="289" height="268"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vyo-iL-iso">
-                            <rect key="frame" x="100" y="143" width="89" height="55"/>
-                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <state key="normal" title="Button"/>
-                            <buttonConfiguration key="configuration" style="plain" image="arrowshape.turn.up.forward" catalog="system" title=""/>
-                            <userDefinedRuntimeAttributes>
-                                <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                                    <real key="value" value="0.0"/>
-                                </userDefinedRuntimeAttribute>
-                            </userDefinedRuntimeAttributes>
-                        </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vfk-dF-8Ez">
-                            <rect key="frame" x="254" y="3" width="30" height="30"/>
-                            <color key="backgroundColor" red="0.23137254900000001" green="0.2274509804" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <rect key="frame" x="254" y="15" width="20" height="20"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="30" id="ASj-1M-sJv"/>
-                                <constraint firstAttribute="height" constant="30" id="H3n-gB-Ziz"/>
+                                <constraint firstAttribute="width" constant="20" id="ASj-1M-sJv"/>
+                                <constraint firstAttribute="height" constant="20" id="H3n-gB-Ziz"/>
                                 <constraint firstAttribute="width" secondItem="Vfk-dF-8Ez" secondAttribute="height" multiplier="1:1" id="HYP-Wn-zdq"/>
                             </constraints>
                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <state key="normal" title="Button"/>
-                            <buttonConfiguration key="configuration" style="plain" image="Icons_close_preview" title="">
-                                <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </buttonConfiguration>
+                            <buttonConfiguration key="configuration" style="plain" title=""/>
                         </button>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gK0-Le-Nd1">
-                            <rect key="frame" x="5" y="73" width="279" height="50"/>
+                        <textField opaque="NO" alpha="0.84999999999999998" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gK0-Le-Nd1">
+                            <rect key="frame" x="5" y="90" width="279" height="50"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="50" id="FAg-pN-a5U"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vyo-iL-iso">
+                            <rect key="frame" x="122.5" y="180" width="44" height="44"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="44" id="7Pc-Rv-fGc"/>
+                                <constraint firstAttribute="width" constant="44" id="Rkb-jb-x15"/>
+                            </constraints>
+                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <state key="normal" title="Button"/>
+                            <buttonConfiguration key="configuration" style="plain" title=""/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                    <real key="value" value="0.0"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="trailing" secondItem="Vfk-dF-8Ez" secondAttribute="trailing" constant="5" id="431-R6-ahd"/>
-                        <constraint firstAttribute="bottom" secondItem="vyo-iL-iso" secondAttribute="bottom" constant="20" id="627-Hi-Ucv"/>
-                        <constraint firstItem="vyo-iL-iso" firstAttribute="top" secondItem="gK0-Le-Nd1" secondAttribute="bottom" constant="20" id="CWE-d9-GSg"/>
-                        <constraint firstItem="gK0-Le-Nd1" firstAttribute="top" secondItem="Vfk-dF-8Ez" secondAttribute="bottom" constant="40" id="IXI-9q-j8M"/>
-                        <constraint firstItem="Vfk-dF-8Ez" firstAttribute="top" secondItem="F9o-RW-ZtE" secondAttribute="top" constant="3" id="KJq-lW-sQe"/>
+                        <constraint firstAttribute="trailing" secondItem="Vfk-dF-8Ez" secondAttribute="trailing" constant="15" id="431-R6-ahd"/>
+                        <constraint firstItem="gK0-Le-Nd1" firstAttribute="top" secondItem="Vfk-dF-8Ez" secondAttribute="bottom" constant="55" id="IXI-9q-j8M"/>
+                        <constraint firstItem="Vfk-dF-8Ez" firstAttribute="top" secondItem="F9o-RW-ZtE" secondAttribute="top" constant="15" id="KJq-lW-sQe"/>
                         <constraint firstAttribute="trailing" secondItem="gK0-Le-Nd1" secondAttribute="trailing" constant="5" id="LlM-TM-rYs"/>
                         <constraint firstItem="gK0-Le-Nd1" firstAttribute="leading" secondItem="F9o-RW-ZtE" secondAttribute="leading" constant="5" id="PsE-Gj-6ED"/>
-                        <constraint firstAttribute="trailing" secondItem="vyo-iL-iso" secondAttribute="trailing" constant="100" id="UPd-jM-tnw"/>
-                        <constraint firstItem="vyo-iL-iso" firstAttribute="leading" secondItem="F9o-RW-ZtE" secondAttribute="leading" constant="100" id="keJ-aM-8rU"/>
+                        <constraint firstItem="vyo-iL-iso" firstAttribute="centerX" secondItem="F9o-RW-ZtE" secondAttribute="centerX" id="idO-s8-LQ1"/>
+                        <constraint firstItem="vyo-iL-iso" firstAttribute="top" secondItem="gK0-Le-Nd1" secondAttribute="bottom" constant="40" id="qb3-Io-8XB"/>
                     </constraints>
                 </view>
             </subviews>
@@ -78,15 +77,11 @@
             <constraints>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="F9o-RW-ZtE" secondAttribute="trailing" constant="75" id="Cs8-ME-EFV"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="F9o-RW-ZtE" secondAttribute="bottom" constant="300" id="W5k-2E-lmZ"/>
-                <constraint firstItem="F9o-RW-ZtE" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="300" id="X79-tr-Joq"/>
+                <constraint firstItem="F9o-RW-ZtE" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="250" id="X79-tr-Joq"/>
                 <constraint firstItem="F9o-RW-ZtE" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="50" id="hv6-lo-SJY"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="137.68115942028987" y="88.392857142857139"/>
         </view>
     </objects>
-    <resources>
-        <image name="Icons_close_preview" width="18" height="18"/>
-        <image name="arrowshape.turn.up.forward" catalog="system" width="128" height="106"/>
-    </resources>
 </document>
