--- a/TravelLive/View/Detail/DetailViewImageCell.xib
+++ b/TravelLive/View/Detail/DetailViewImageCell.xib
@@ -13,7 +13,7 @@
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="451" id="KGk-i7-Jjw" customClass="DetailViewImageCell" customModule="TravelLive" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="451"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="451"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
@@ -68,14 +68,6 @@
                         <state key="normal" title="Button"/>
                         <buttonConfiguration key="configuration" style="plain" image="share" title=""/>
                     </button>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MJv-zd-liO">
-                        <rect key="frame" x="330" y="404" width="48" height="40"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="40" id="X4f-qj-pus"/>
-                        </constraints>
-                        <state key="normal" title="Button"/>
-                        <buttonConfiguration key="configuration" style="plain" image="chat" title=""/>
-                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="LBJ-ic-zyH" firstAttribute="top" secondItem="i4r-If-eMK" secondAttribute="bottom" constant="10" id="2vL-96-yg8"/>
@@ -91,18 +83,13 @@
                     <constraint firstItem="706-2I-Hxf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="Obi-3p-Ejj"/>
                     <constraint firstItem="zhW-ut-ZZH" firstAttribute="leading" secondItem="LBJ-ic-zyH" secondAttribute="trailing" constant="15" id="PJu-0x-DmX"/>
                     <constraint firstAttribute="trailing" secondItem="Sra-ti-o8l" secondAttribute="trailing" constant="20" id="SUt-Qe-Khf"/>
-                    <constraint firstAttribute="bottom" secondItem="MJv-zd-liO" secondAttribute="bottom" id="avk-7A-IdD"/>
                     <constraint firstItem="i4r-If-eMK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="elY-Zw-XrM"/>
                     <constraint firstItem="i4r-If-eMK" firstAttribute="top" secondItem="Bv2-nt-MHw" secondAttribute="bottom" constant="31.5" id="hxf-3C-Avf"/>
                     <constraint firstItem="Bv2-nt-MHw" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="21.5" id="oT3-nY-kdW"/>
-                    <constraint firstItem="zhW-ut-ZZH" firstAttribute="centerY" secondItem="MJv-zd-liO" secondAttribute="centerY" id="ot3-sj-2LM"/>
-                    <constraint firstItem="MJv-zd-liO" firstAttribute="leading" secondItem="zhW-ut-ZZH" secondAttribute="trailing" constant="230" id="tRz-fz-ran"/>
-                    <constraint firstItem="MJv-zd-liO" firstAttribute="top" secondItem="i4r-If-eMK" secondAttribute="bottom" constant="10" id="vwH-wA-g3L"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="commentButton" destination="MJv-zd-liO" id="5IE-Ex-iyO"/>
                 <outlet property="loveButton" destination="LBJ-ic-zyH" id="bNH-Zk-O2P"/>
                 <outlet property="reportButton" destination="Sra-ti-o8l" id="yYh-KZ-O5p"/>
                 <outlet property="shareButton" destination="zhW-ut-ZZH" id="ft3-aa-LKY"/>
@@ -114,7 +101,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="chat" width="24" height="24"/>
         <image name="emptyHeart" width="32" height="32"/>
         <image name="option" width="32" height="32"/>
         <image name="share" width="32" height="32"/>
