--- a/TravelLive/View/Detail/DetailViewCommentCell.xib
+++ b/TravelLive/View/Detail/DetailViewCommentCell.xib
@@ -17,13 +17,13 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4rp-8H-uLr">
-                        <rect key="frame" x="43" y="14" width="42" height="20.5"/>
+                        <rect key="frame" x="43" y="15.5" width="42" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lRD-BC-c7N">
-                        <rect key="frame" x="100" y="14" width="41.5" height="20.5"/>
+                        <rect key="frame" x="100" y="14" width="41.5" height="23"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -36,7 +36,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="niB-x0-k52">
-                        <rect key="frame" x="44" y="42.5" width="28.5" height="13.5"/>
+                        <rect key="frame" x="44" y="44" width="28.5" height="13.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
@@ -44,13 +44,14 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="lRD-BC-c7N" firstAttribute="leading" secondItem="4rp-8H-uLr" secondAttribute="trailing" constant="15" id="03M-xe-xey"/>
+                    <constraint firstItem="8Nu-yG-av0" firstAttribute="centerY" secondItem="4rp-8H-uLr" secondAttribute="centerY" id="5DJ-Gt-mac"/>
                     <constraint firstAttribute="bottom" secondItem="8Nu-yG-av0" secondAttribute="bottom" id="DhO-a7-5Mh"/>
                     <constraint firstItem="8Nu-yG-av0" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="KDQ-Lq-AJn"/>
                     <constraint firstItem="niB-x0-k52" firstAttribute="top" secondItem="4rp-8H-uLr" secondAttribute="bottom" constant="8" id="KS4-nk-0lZ"/>
                     <constraint firstItem="4rp-8H-uLr" firstAttribute="leading" secondItem="8Nu-yG-av0" secondAttribute="trailing" constant="10" id="N4v-ot-3Ms"/>
                     <constraint firstItem="niB-x0-k52" firstAttribute="leading" secondItem="8Nu-yG-av0" secondAttribute="trailing" constant="11" id="RhQ-Wt-QA1"/>
-                    <constraint firstItem="lRD-BC-c7N" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="14" id="ddV-a3-trE"/>
-                    <constraint firstItem="4rp-8H-uLr" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="14" id="p4o-Yl-uYI"/>
+                    <constraint firstItem="lRD-BC-c7N" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="14" id="XfZ-aF-VSg"/>
+                    <constraint firstItem="4rp-8H-uLr" firstAttribute="centerY" secondItem="lRD-BC-c7N" secondAttribute="centerY" id="pcH-ds-Nuf"/>
                     <constraint firstItem="8Nu-yG-av0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="13" id="uVW-tQ-uJf"/>
                 </constraints>
             </tableViewCellContentView>
