--- a/TravelLive/View/Search.storyboard
+++ b/TravelLive/View/Search.storyboard
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Auo-1K-bJ3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Auo-1K-bJ3">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Search View Controller-->
+        <!--搜尋-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
                 <viewController id="Y6W-OH-hqX" customClass="SearchViewController" customModule="TravelLive" customModuleProvider="target" sceneMemberID="viewController">
@@ -61,7 +61,7 @@
                             <constraint firstItem="F9u-sn-fjy" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="wuC-KG-zoT"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="cZ9-kn-oyJ"/>
+                    <navigationItem key="navigationItem" title="搜尋" id="cZ9-kn-oyJ"/>
                     <connections>
                         <outlet property="gridLayout" destination="8sh-Rd-g5E" id="Ur0-3X-Kp2"/>
                         <outlet property="searchCollectionView" destination="F9u-sn-fjy" id="LKz-ac-c1g"/>
