--- a/TravelLive/View/Map/PlaceEventViewLocationCell.xib
+++ b/TravelLive/View/Map/PlaceEventViewLocationCell.xib
@@ -9,43 +9,33 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="83" id="KGk-i7-Jjw" customClass="PlaceEventViewLocationCell" customModule="TravelLive" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="83"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="30" id="KGk-i7-Jjw" customClass="PlaceEventViewLocationCell" customModule="TravelLive" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="323" height="30"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="83"/>
+                <rect key="frame" x="0.0" y="0.0" width="323" height="30"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VfB-ei-cqG">
-                        <rect key="frame" x="16" y="16" width="42" height="21"/>
+                        <rect key="frame" x="16" y="0.0" width="42" height="24"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xOT-3I-i9f">
-                        <rect key="frame" x="16" y="53" width="42" height="21"/>
+                        <rect key="frame" x="78" y="0.0" width="42" height="24"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="x72-Rz-k9U">
-                        <rect key="frame" x="260" y="20" width="44" height="44"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="44" id="39o-La-9BQ"/>
-                            <constraint firstAttribute="width" secondItem="x72-Rz-k9U" secondAttribute="height" multiplier="1:1" id="Y3P-97-9vM"/>
-                            <constraint firstAttribute="height" constant="44" id="gOF-sQ-7ce"/>
-                        </constraints>
-                    </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="xOT-3I-i9f" secondAttribute="bottom" constant="8" id="09U-G9-Gng"/>
-                    <constraint firstItem="x72-Rz-k9U" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="875-6Y-Koa"/>
-                    <constraint firstItem="xOT-3I-i9f" firstAttribute="top" secondItem="VfB-ei-cqG" secondAttribute="bottom" constant="16" id="Bkh-Iw-gNR"/>
+                    <constraint firstItem="VfB-ei-cqG" firstAttribute="centerY" secondItem="xOT-3I-i9f" secondAttribute="centerY" id="3nY-Zw-cSV"/>
+                    <constraint firstItem="xOT-3I-i9f" firstAttribute="leading" secondItem="VfB-ei-cqG" secondAttribute="trailing" constant="20" id="IoX-7d-FOz"/>
                     <constraint firstItem="VfB-ei-cqG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="LF0-c7-d2P"/>
-                    <constraint firstItem="VfB-ei-cqG" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="P8m-lz-6Mw"/>
-                    <constraint firstItem="x72-Rz-k9U" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" symbolic="YES" id="bSp-NQ-LSG"/>
-                    <constraint firstAttribute="trailing" secondItem="x72-Rz-k9U" secondAttribute="trailing" constant="16" id="cGs-ZI-7Hu"/>
-                    <constraint firstItem="xOT-3I-i9f" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="jJb-f6-VJu"/>
+                    <constraint firstAttribute="bottom" secondItem="xOT-3I-i9f" secondAttribute="bottom" constant="6" id="MjY-rK-rqx"/>
+                    <constraint firstItem="VfB-ei-cqG" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="P8m-lz-6Mw"/>
+                    <constraint firstItem="xOT-3I-i9f" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="c7H-c8-f9y"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -53,7 +43,7 @@
                 <outlet property="detailLocationLabel" destination="xOT-3I-i9f" id="N6l-tk-74V"/>
                 <outlet property="locationTitleLabel" destination="VfB-ei-cqG" id="RIQ-gG-mNJ"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="144.97767857142856"/>
+            <point key="canvasLocation" x="139.85507246376812" y="126.5625"/>
         </tableViewCell>
     </objects>
 </document>
